--- a/Zombiez/CMakeLists.txt
+++ b/Zombiez/CMakeLists.txt
@@ -14,7 +14,7 @@ include_directories(../TabulaRasa/include include
         ${SDL2_TTF_INCLUDE_DIR}
         ${SDL2_MIXER_INCLUDE_DIRS})
 
-add_executable(zombiez src/main.cpp src/MainGame.cpp include/MainGame.h src/Bullet.cpp include/Bullet.h)
+add_executable(zombiez src/main.cpp src/MainGame.cpp include/GameObject.h include/Drawable.h src/Drawable.cpp include/MainGame.h src/Bullet.cpp include/Bullet.h src/GameObject.cpp include/Level.h include/Actor.h include/Updatable.h src/Level.cpp src/Actor.cpp)
 target_link_libraries(zombiez tabula_rasa ${SDL2_LIBRARY} ${SDL2_IMAGE_LIBRARIES} ${SDL2_TTF_LIBRARIES} ${SDL2_MIXER_LIBRARIES})
 if (APPLE)
     target_link_libraries(zombiez "-framework OpenGL")
